--- a/src/qml/lang/cz.json
+++ b/src/qml/lang/cz.json
@@ -51,6 +51,10 @@
 			"open": "Otevřít",
 			"back": "Zpět"
 		},
+		"calculator": {
+			"button": "Kalkulačka",
+			"title": "Kalkulačka"
+		},
 		"settings": {
 			"button": "Nastavení",
 			"title": "Nastavení systému",
