--- a/src/qml/lang/en.json
+++ b/src/qml/lang/en.json
@@ -56,7 +56,7 @@
 			"title": "Calculator"
 		},
 		"speedtest": {
-			"button": "Speed Test",
+			"button": "Speed test",
 			"title": "Internet speed test"
 		},
 		"settings": {
