--- a/src/qml/lang/en.json
+++ b/src/qml/lang/en.json
@@ -57,7 +57,9 @@
 		},
 		"speedtest": {
 			"button": "Speed test",
-			"title": "Internet speed test"
+			"title": "Internet speed test",
+			"start": "Start test",
+			"progress": "Testing ..."
 		},
 		"settings": {
 			"button": "Settings",
