--- a/src/qml/lang/cz.json
+++ b/src/qml/lang/cz.json
@@ -43,8 +43,10 @@
 		"button": "Přehrávač médií",
 		"title": "Přehrávač médií",
 		"local": "Místní soubor",
+		"folder": "Místní složka",
 		"network": "Síťový proud",
 		"storage": "Místní úložiště",
+		"all": "Přehrát vše v této složce",
 		"select": "Vybrat soubor",
 		"url": "Zadejte URL",
 		"open": "Otevřít",
