--- a/src/qml/lang/en.json
+++ b/src/qml/lang/en.json
@@ -43,8 +43,10 @@
 		"button": "Media player",
 		"title": "Media player",
 		"local": "Local file",
+		"folder": "Local folder",
 		"network": "Network stream",
 		"storage": "Local storage",
+		"all": "Play all media in this folder",
 		"select": "Select file",
 		"url": "Enter URL",
 		"open": "Open",
