WIP: Internet radio

--- a/src/qml/lang/cz.json
+++ b/src/qml/lang/cz.json
@@ -56,6 +56,39 @@
 		"button": "Kalkulačka",
 		"title": "Kalkulačka"
 	},
+	"radio": {
+		"button": "Internetové rádio",
+		"menu": {
+			"title": "Internetové rádio",
+			"favs": "Moje oblíbené",
+			"search": "Hledat",
+			"country": "Seznam podle zemí",
+			"language": "Seznam podle jazyků"
+		},
+		"player": {
+			"title": "Přehrávač rádia",
+			"favs_add": "Přidat do oblíbených",
+			"favs_del": "Odebrat z oblíbených",
+			"stop": "Zastavit",
+			"play": "Přehrát",
+			"loading": "Načítání..."
+		},
+		"search": {
+			"title": "Hledat stanice",
+			"placeholder": "Zadejte název stanice...",
+			"no_results": "Žádné stanice nenalezeny"
+		},
+		"country": {
+			"title": "Stanice podle zemí"
+		},
+		"language": {
+			"title": "Stanice podle jazyků"
+		},
+		"favourites": {
+			"title": "Moje oblíbené stanice",
+			"empty": "Zatím žádné oblíbené stanice"
+		}
+	},
 	"speedtest": {
 		"button": "Měření rychlosti",
 		"title": "Měření rychlosti internetu",
