--- a/src/qml/lang/en.json
+++ b/src/qml/lang/en.json
@@ -57,28 +57,26 @@
 		"title": "Calculator"
 	},
 	"radio": {
+		"title": "Internet radio",
 		"button": "Internet radio",
-		"menu": {
-			"title": "Internet radio",
-			"favs": "My favourites",
-			"search": "Search",
-			"country": "List by country",
-			"language": "List by language"
-		},
-		"favourites": {
+		"favs": {
 			"title": "My favourite stations",
-			"empty": "No favourite stations yet"
+			"button": "My favourites",
+			"empty": "No favourite stations found"
 		},
 		"search": {
 			"title": "Search stations",
+			"button": "Search",
 			"placeholder": "Enter station name...",
 			"no_results": "No stations found"
 		},
 		"country": {
-			"title": "Stations by country"
+			"title": "Stations by country",
+			"button": "List by country"
 		},
 		"language": {
-			"title": "Stations by language"
+			"title": "Stations by language",
+			"button": "List by language"
 		},
 		"player": {
 			"title": "Radio player",
